[package]
name = "solana-simulate"
version = "0.1.0"
edition = "2021"
description = "A Solana transaction simulator"
license = "Apache-2.0"
repository = "https://github.com/yutianwu/solana-simulate"

[dependencies]
base64 = "0.22.1"
log = "0.4.20"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.114"
solana-bpf-loader-program = "2.2.1"
solana-compute-budget = "2.2.1"
solana-compute-budget-program = "2.2.1"
solana-program-runtime = "2.2.1"
solana-sdk = "2.2.1"
solana-svm = "2.2.1"
solana-system-program = "2.2.1"
bincode = "1.3.3"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }

[lib]
name = "solana_simulate"
path = "src/lib.rs"

[[bin]]
name = "solana-simulate"
path = "src/main.rs"

[[bin]]
name = "get-accounts"
path = "src/get_accounts.rs"